--- a/source/html/index.html
+++ b/source/html/index.html
@@ -4,14 +4,146 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="//netdna.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+
     <title>MP1 Starter</title>
 </head>
 
 <body>
 
-    <h2>Welcome to MP1!</h2>
+  <header>
+    <div class="navBar" id="navBar">
+      <div id="navItemHeight" class="navItem">
+        <!-- <li id="home"><a id="navSize">Home</a></li>
+        <li id="mooncake"><a id="navSize"> Mooncake </a></li>
+        <li id="icecream"><a id="navSize">Ice Cream</a></li>
+        <li id="contact"><a id="navSize">Contact</a></li> -->
+        <a id="home">Home</a>
+        <a id="mooncake"> Mooncake </a>
+        <a id="icecream">Ice Cream</a>
+       	<a id="contact">Contact</a>
+      </div>
+    </div>
+  </header>
+  <div class="noObj"> </div>
+<div class="Home">
+<!--   <div id="modal-overlay"> 
+	<div class="modal-data">		
+	    <p>a modal </p>
+	    <a id="modal1" href="">close</a>
+	</div>
+</div>
+   <a href="#" id="modal1"><h1>welcome</h1></a>
+ -->
 
-    <script src="bundle.js" type="text/javascript"></script>
+<div class="innerHome">Learn to make desserts!</div>
+
+
+
+
+</div>
+
+
+
+  
+<div class="Mooncake">
+  <h1>Mooncake</h1>
+   <div class="flex-container2">
+        <div class="flex-item2">
+        	<div class="step1">
+        	<div id="step1" class="modal">
+        		<h2>step1</h2>
+        		<p>Mix together the ingredients for the dough.</p>
+        	</div>
+        	<div id="step1over" class="modaloverlaycss">
+        		<p>Stir together the alkaline water, golden syrup, and vegetable oil, and sift in the flour more slowly. When mixed together, these ingredients should form a dough. Cover the dough with saran wrap and set it aside for at least 3 hours.</p>
+
+        	</div>
+        	</div>
+
+      </div>
+         <div class="flex-item2">
+         	<div class="step2">
+        		<h2>step2</h2>
+        		<p>Prepare the salted egg yolks and preheat the oven.</p>
+        	</div>
+      </div>
+      <div class="flex-item2">
+
+            <div class="step3">
+        		<h2>step3</h2>
+        		<p>Separate the dough and assemble your mooncake.</p>
+        	</div>
+      </div>
+      </div>
+      <p class="enjoy"> click the step1 blocks to show more information, click again to show the steps</p>
+     <div class="enjoy"><h2>Enjoy the pictures!</h2></div> 
+ <div class="carousel">
+ 	<img src="./assets/mooncake1.jpg" class="pictures" id="pic1">
+ <div class="btn btnLeft" id="btnLeft"><button class="button" id="button1"><</button></div>
+ <div class="btn btnRight"><button class="button" id="button2">></button></div>
+   
+</div>
+   
+    </div> 
+<!-- test -->
+<!-- <div id="modal-overlay"> 
+	<div class="modal-data">		
+	    <p>a modal </p>
+	    <a id="modal1" href="">close</a>
+	</div>
+</div>
+   <a href="#" id="modal1"><h1>welcome</h1></a> -->
+<!-- test -->
+
+
+
+  
+<div class="IceCream">
+  <h1>Ice Cream</h1>
+     <div class="enjoy"><h2>Learn to make ice creams now!</h2></div>
+  
+ <video class="video"  loop="loop" autoplay="autoplay">
+	<source src="./assets/movie/icecream.mp4">
+</video>
+
+
+  
+ 
+  
+<div class="Contact">
+  <h1>Contact</h1>
+  <p class="enjoy">If you want to discuss how to make desserts with me, feel free to contact me!</p>
+
+<!-- 
+<video class="video"  loop="loop" autoplay="autoplay">
+	<source src="./assets/movie/movie.mp4">
+</video>
+ -->
+<!--  <div id="modal" class="modalcss">hahha</div>	
+ <div id="modaloverlay" class="modaloverlaycss">heiheihe</div>
+
+  -->
+
+
+<div class="info">
+  <ul class="infoList">
+     <li><i class="fa fa-id-card fa" id="first">Yan Xu</i></li>
+     <li><i class="fa fa-envelope-open fa" id="second">yanxu3@illinois.edu</i></li>
+	 <li> <i class="fa fa-twitter-square fa" id="third">Yan</i></li>
+	  <!-- <i class="fa fa-phone fa-3x">217-721-2678</i>  -->
+	</ul>
+</div>
+
+
+
+
+
+</div>
+
+  <footer><p id="footer">Copyright©2017 Yan Xu. All Rights Reserved. </p></footer>
+   <script src="bundle.js" type="text/javascript"></script>
 </body>
+
 
 </html>
