--- a/source/html/index.html
+++ b/source/html/index.html
@@ -104,7 +104,7 @@
      <div class="enjoy"><h2>Learn to make ice creams now!</h2></div>
   
  <video class="video"  loop="loop" autoplay="autoplay">
-	<source src="./assets/movie/icecream.mp4">
+	<source src="./assets/icecream.mp4">
 </video>
 
 
